--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -392,7 +392,7 @@
     <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.4.0/lunr.stemmer.support.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.4.0/lunr.no.min.js"></script>
     <script>
-      window.SEARCH_INDEX_URL = '{{ '/assets/search-index.json' | relative_url }}';
+      window.SEARCH_INDEX_URL = '{{ "/assets/search-index.json" | relative_url }}';
       
       // Inline search functionality
       (function(){
